# oni_nav_contoler

./: .gitignore  LICENSE  README.md  exec.bash  oni_msgs  oni_nav.repos
doc/: plan.md  requirement.txt  specification.md
oni_msgs/: CMakeLists.txt  package.xml
oni_msgs/msg/: BBox.msg  NavDebug.msg  SystemState.msg
oni_nav_controller/: CMakeLists.txt  package.xml
oni_nav_controller/acados_generated/: oni_nmpc.json
oni_nav_controller/c_generated_code/: CMakeLists.txt  Makefile  acados_sim_solver_oni_nmpc.c  acados_sim_solver_oni_nmpc.h  acados_solver.pxd  acados_solver_oni_nmpc.c  acados_solver_oni_nmpc.h  main_oni_nmpc.c  main_sim_oni_nmpc.c
oni_nav_controller/c_generated_code/oni_nmpc_cost/: oni_nmpc_cost.h  oni_nmpc_cost_ext_cost_0_fun.c  oni_nmpc_cost_ext_cost_0_fun_jac.c  oni_nmpc_cost_ext_cost_0_fun_jac_hess.c  oni_nmpc_cost_ext_cost_e_fun.c  oni_nmpc_cost_ext_cost_e_fun_jac.c  oni_nmpc_cost_ext_cost_e_fun_jac_hess.c  oni_nmpc_cost_ext_cost_fun.c  oni_nmpc_cost_ext_cost_fun_jac.c  oni_nmpc_cost_ext_cost_fun_jac_hess.c
oni_nav_controller/c_generated_code/oni_nmpc_model/: oni_nmpc_expl_ode_fun.c  oni_nmpc_expl_ode_hess.c  oni_nmpc_expl_vde_adj.c  oni_nmpc_expl_vde_forw.c  oni_nmpc_model.h
oni_nav_controller/config/: nav_controller.yaml
oni_nav_controller/include/oni_nav_controller/: failsafe.hpp  motion_controller.hpp  nav_controller_node.hpp  nmpc_solver.hpp  obstacle_model.hpp  phase_fsm.hpp  state_estimator.hpp  target_localizer.hpp  types.hpp
oni_nav_controller/launch/: mock_nav_test.launch.py  nav_controller.launch.py
oni_nav_controller/scripts/: generate_nmpc_solver.py  mock_nav_inputs.py
oni_nav_controller/src/: failsafe.cpp  motion_controller.cpp  nav_controller_node.cpp  nmpc_solver.cpp  obstacle_model.cpp  phase_fsm.cpp  state_estimator.cpp  target_localizer.cpp
oni_nav_controller/test/: test_motion_controller.cpp  test_nmpc_solver.cpp  test_obstacle_model.cpp  test_phase_fsm.cpp  test_state_estimator.cpp  test_target_localizer.cpp
